--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ body{
     color:black;
     background-color: white;
     height: 50px;
-    width: 216px;
-    margin:3px;
+    width: 206px;
+    margin:2px;
     background-color: rgb(255, 255, 173);
     font-size: 25px;
     display: flex;
@@ -24,7 +24,7 @@ body{
 
     align-self: center;
     margin-right: 5px;
-    max-width: 206px;
+    max-width: 205px;
     overflow: hidden;
 }
 #calculadora{
@@ -34,7 +34,7 @@ body{
     width: fit-content;
     height: fit-content;
     margin: 10% auto;
-    padding: 15px;
+    padding: 8px;
     border-radius: 15px;
 }
 .botao{
@@ -42,7 +42,7 @@ body{
     height: 50px;
     font-size: 25px;
     cursor:pointer;
-    margin:1.5px;
+
 
 }
 .botao:hover{
@@ -51,12 +51,13 @@ body{
     font-weight: bold;
 }
 .igual{
-    height: 105px;
     background-color: rgb(119, 119, 255);
+    border-radius: 0 0 10px 0;
 }
 .igual:hover{
     background-color: rgb(31, 31, 134);
 }
 .zero{
-    width: 105px;
+    width: 102px;
+    border-radius: 0px 0 0 10px;
 }
